--- a/.github/workflows/ci-deploy.yml
+++ b/.github/workflows/ci-deploy.yml
@@ -1,18 +1,48 @@
-deploy:
-  name: Deploy to Hostinger
-  runs-on: ubuntu-latest
-  needs: test
-  if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-  steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+name: CI & Deploy to Hostinger
 
-    - name: Start SSH agent and add key
-      uses: webfactory/ssh-agent@v0.5.4
-      with:
-        ssh-private-key: ${{ secrets.HOSTINGER_SSH_KEY }}
+on:
+  pull_request:
+    branches: [main]
+  push:
+    branches: [main]
 
-    - name: Deploy via rsync
-      run: |
-        rsync -avz -e "ssh -p 65002" --delete ./ \
-          ${{ secrets.HOSTINGER_USER }}@${{ secrets.HOSTINGER_HOST }}:/home/${{ secrets.HOSTINGER_USER }}/public_html
+jobs:
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests
+        run: npm test
+
+  deploy:
+    name: Deploy to Hostinger
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Start SSH agent and add key
+        uses: webfactory/ssh-agent@v0.5.4
+        with:
+          ssh-private-key: ${{ secrets.HOSTINGER_SSH_KEY }}
+
+      - name: Deploy via rsync
+        run: |
+          rsync -avz -e "ssh -p 65002" --delete ./ \
+            ${{ secrets.HOSTINGER_USER }}@${{ secrets.HOSTINGER_HOST }}:/home/${{ secrets.HOSTINGER_USER }}/public_html
+
+      - name: Verify deployment
+        run: curl -I https://outsourze.com
