--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "export": "next export",
     "deploy": "npm run build && npm run export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
     "motion": "^12.23.12",
     "next": "15.4.4",
+    "next-sitemap": "^4.2.3",
     "nodemailer": "^7.0.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
